# LabAvanzado

./: LICENSE  README.md
Detección Geiger-Muller/: README.md
Detección Geiger-Muller/LA02/: CMakeLists.txt  exampleLA02.cc  run1.mac
Detección Geiger-Muller/Resultados/: ajuste decaimiento.txt  resultados.txt
Detección Geiger-Muller/builder/: CMakeCache.txt  G4History.macro  LA02_h1_LA02.root  Makefile  cmake_install.cmake  run1.mac  vis.mac
T1/: README.md
T1.II/: README.md  simple.cpp
T1/T1.II.1/: README.md  class01.cpp  simple.hpp
T1/T1.II.2/: class02.cpp  persona.cpp  persona.hpp
T1/T1.II.3/: README.md  VecR3.cpp  class03Tarea.cpp  main.cpp  output.txt
Tarea 2/2.II.1/: README.md  tarea2.C
proyecto dispersión de Rutherford/: Readme.md
proyecto dispersión de Rutherford/Resultados/: AjustePlotRut.txt  Resultados Simulacion.txt
proyecto dispersión de Rutherford/RuEx03/: CMakeLists.txt  RuEx.in  init_vis.mac  main.cc  vis.mac
proyecto dispersión de Rutherford/RuEx03/include/: RuExAccumulable.hh  RuExActionInitialization.hh  RuExDetectorConstruction.hh  RuExEventAction.hh  RuExPrimaryGeneratorAction.hh  RuExRunAction.hh  RuExSteppingAction.hh
proyecto dispersión de Rutherford/RuEx03/src/: RuExAccumulable.cc  RuExActionInitialization.cc  RuExDetectorConstruction.cc  RuExEventAction.cc  RuExPrimaryGeneratorAction.cc  RuExRunAction.cc  RuExSteppingAction.cc
proyecto dispersión de Rutherford/builder/: CMakeCache.txt  G4History.macro  Makefile  RuEx.in  cmake_install.cmake  resultados.txt  vis.mac
proyecto vida media del muón/: README.md  ReadPAA-ROOT.C
proyecto vida media del muón/Datos Fits/: FitTotal  fitsindividuales
proyecto vida media del muón/datos procesados/: LA-mml-data_1h-180320-173703.paa.txt  LA-mml-data_1h-180320-173703.txt  LA-mml-data_1h-180320-174704.txt  LA-mml-data_1h-180320-175704.txt  LA-mml-data_1h-180320-180704.txt  LA-mml-data_1h-180320-181704.txt  LA-mml-data_1h-180320-182704.txt  (+1 more)
(+18 files in other folders)
